<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/zhanghao_key"
        android:layout_width="415dp"
        android:layout_height="61dp"
        android:layout_marginBottom="344dp"
        android:allowUndo="false"
        android:foregroundTint="#000000"
        android:foregroundTintMode="screen"
        android:gravity="center"
        android:hint="请输入你的账号"
        android:inputType="number"
        android:layerType="none"
        android:text="18465789972"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@null"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_key"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zhanghao_key"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/yanzhengfangshi"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="28dp"
        android:text="@string/yanzhengfangshi_key"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.464" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/mmx" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897">

        <TextView
            android:id="@+id/findpassword"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:text="@string/findpassword_key"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/stop"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:text="@string/stop_key"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/more"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:text="@string/more_key"
            android:textColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>